Prevent flexslider overflow

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -170,6 +170,8 @@ section .img--round {
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
+
+  overflow: hidden;
 }
 
 .portfolio .flexslider {
